Refactor GameController
