# docs/openapi.yaml
@@ -16,6 +16,7 @@ paths:
         - currency
       summary: Currency Conversion Rates
       description: Get current conversion rates
+      security: []
       parameters:
         - name: to
           in: query
@@ -32,47 +33,21 @@ paths:
         default:
           $ref: "./defs/default-error.yaml"
 
-  /v2/dlcinfo/:
+  /dlcinfo/v2:
     get:
+      operationId: get-v2-dlcinfo
+      tags:
+        - game
+      summary: DLC Info
+      security: []
       parameters:
         - $ref: '#/components/parameters/AppId'
       responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    $ref: '#/components/schemas/SuccessResult'
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                        name:
-                          type: string
-                        description:
-                          type: string
-              examples:
-                successResponse:
-                  value:
-                    result: success
-                    data:
-                      - id: 3
-                        name: Cosmetic Content
-                        desc: This DLC adds cosmetic or costume changes to your game.
-                      - id: 4
-                        name: New In-Game Items
-                        desc: This DLC adds new in-game items, weapons, vehicles, or other usable equipment.
+        200:
+          $ref: "./defs/dlcinfo.v2.200.yaml"
         default:
-          $ref: '#/components/schemas/ErrorResponse'
-      operationId: get-v2-dlcinfo
-      summary: DLC Info
-    parameters: []
+          $ref: './defs/default-error.yaml'
+
   /v2/market/cards/:
     get:
       parameters:
